--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
       <button mat-icon-button (click)="snav.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
-      <h1>Outsera Front-end Test - Golden Raspberry Awards</h1>
+      <h1>{{title}}</h1>
     </mat-toolbar>
   </header>
 
